Addition to /data.md, edited CV link on homepage.

--- a/config.yml
+++ b/config.yml
@@ -55,7 +55,7 @@ params:
           imageHeight: 160
           buttons:
             - name: CV
-              url: cv-no-outline.html
+              url: cv.html
             - name: Research
               url: papers/
             - name: DataSci
